lyricue3 (3.0.8-1) maverick; urgency=low

  * Make presentation import retry if fails
  * Store presentation temp files in /var/tmp instead of /tmp
  * Packaging changes

 -- Chris Debenham <chris@adebenham.com>  Tue, 5 Sep 2010 17:30:00 +1000

lyricue3 (3.0.7-1) maverick; urgency=low

  * Fixes for bible preview
  * Fix crash when blanking screen to database image
  * SEMI should be :

 -- Chris Debenham <chris@adebenham.com>  Sun, 5 Sep 2010 17:30:00 +1000

lyricue3 (3.0.6-1) maverick; urgency=low

  * More fixes to preview command
  * Change debug messages for verse adding
  * Use mipmaps for glyph caches

 -- Chris Debenham <chris@adebenham.com>  Fri, 3 Sep 2010 17:30:00 +1000

lyricue3 (3.0.5-1) lucid; urgency=low

  * Fix preview command

 -- Chris Debenham <chris@adebenham.com>  Thu, 10 Aug 2010 17:30:00 +1000

lyricue3 (3.0.4-1) lucid; urgency=low

  * Fix crash on reconfigure

 -- Chris Debenham <chris@adebenham.com>  Wed, 10 Aug 2010 17:30:00 +1000

lyricue3 (3.0.3-1) lucid; urgency=low

  * Add conflict for lyricue/lyricue-cvs
  * Look for sql updates in right directory

 -- Chris Debenham <chris@adebenham.com>  Tue, 10 Aug 2010 17:30:00 +1000

lyricue3 (3.0.2-1) lucid; urgency=low

  * Add sword support

 -- Chris Debenham <chris@adebenham.com>  Tue, 10 Aug 2010 17:30:00 +1000

lyricue3 (3.0.1-2) karmic; urgency=low

  * Initial release 

 -- Chris Debenham <chris@adebenham.com>  Fri, 06 Aug 2010 17:44:02 +1000