@@ -18,10 +18,10 @@ share_DATA = \
 	Lyricue-first-run-sidebar.png \
 	UpRight.svg \
 	Down.svg  \
-	Up.svg\
+	Up.svg \
 	Left.svg   \
 	lyricue-icon.png     \
-	Right.svg\
+	Right.svg \
 	lyricue.glade
 
 etc_DATA = \
