@@ -3,6 +3,9 @@ lyricue3 (3.0.8-1) maverick; urgency=low
   * Make presentation import retry if fails
   * Store presentation temp files in /var/tmp instead of /tmp
   * Packaging changes
+  * Implement dbimage loading
+  * Don't try to set the geometry if it is null
+  * Make lyricue_display log to logfile/stderr
 
  -- Chris Debenham <chris@adebenham.com>  Tue, 5 Sep 2010 17:30:00 +1000
 
